--- a/orca-web/config/orca.yml
+++ b/orca-web/config/orca.yml
@@ -46,6 +46,9 @@ tasks:
   executionWindow:
     timezone: ${global.spinnaker.timezone:America/Los_Angeles}
 
+okhttp:
+  timeout: 10
+
 logging:
   config: classpath:logback-defaults.xml
 
