feat(web): refactor TaskController to support externalized config properties
optimize getPipelinesForApplication() by reducing the number of relevant pipeline config ids to query

This is a breaking change:
TaskController previously looked at these properties:
`tasks.days-of-execution-history`
`tasks.number-of-old-pipeline-executions-to-include`
and now they live in `tasks.controller`.

fix(web): give java code access to groovy
to fix below error:

> Task :orca-web:compileJava FAILED
../orca/orca-web/src/main/java/com/netflix/spinnaker/config/TaskControllerConfigurationProperties.java:19: error: cannot find symbol
import com.netflix.spinnaker.orca.controllers.TaskController;
                                             ^
  symbol:   class TaskController
  location: package com.netflix.spinnaker.orca.controllers
1 error

--- a/orca-web/orca-web.gradle
+++ b/orca-web/orca-web.gradle
@@ -97,6 +97,13 @@ dependencies {
   testImplementation ("com.squareup.retrofit2:retrofit-mock")
 }
 
+sourceSets {
+  main {
+    java { srcDirs = [] }    // no source dirs for the java compiler
+    groovy { srcDirs = ["src/main/java", "src/main/groovy"] }  // compile   everything in src/ with groovy
+  }
+}
+
 test {
   //The Implementation-Version is set in the MANIFEST.MF for the JAR produced via testing so that
   //assertions can be made against the version (see orca-plugins-test, for example).
