--- a/orca-web/orca-web.gradle
+++ b/orca-web/orca-web.gradle
@@ -94,6 +94,9 @@ dependencies {
   testImplementation("io.strikt:strikt-core")
   testImplementation("io.mockk:mockk")
   testImplementation("org.apache.groovy:groovy-json")
+  testImplementation("com.nhaarman:mockito-kotlin")
+  testImplementation("io.spinnaker.kork:kork-sql-test")
+  testImplementation("org.testcontainers:mysql")
   testImplementation ("com.squareup.retrofit2:retrofit-mock")
 }
 
