fix(integration): add useJUnitPlatform to orca-integration.gradle
so the tests actually run

--- a/orca-integration/orca-integration.gradle
+++ b/orca-integration/orca-integration.gradle
@@ -17,6 +17,8 @@ test.configure {
 }
 
 test {
+  useJUnitPlatform()
+
   // So stdout and stderr from the just-built container are available in CI
   testLogging.showStandardStreams = true
 
