fix(liquibase): Fix validChecksum errors occurred due to liquibase upgrade

--- a/orca-sql/src/main/resources/db/changelog/20180521-status-enum.yml
+++ b/orca-sql/src/main/resources/db/changelog/20180521-status-enum.yml
@@ -1,5 +1,6 @@
 databaseChangeLog:
 - changeSet:
+   validCheckSum: 8:a927aca379a0eecf2a6eecdee281be9f
    id: modify-status-column-enum
    author: afeldman
    changes:
