--- a/orca-sql/src/main/resources/db/changelog/20180510-add-legacy-id-fields.yml
+++ b/orca-sql/src/main/resources/db/changelog/20180510-add-legacy-id-fields.yml
@@ -4,6 +4,7 @@ databaseChangeLog:
     dbms: postgresql
     remove: afterColumn
 - changeSet:
+    validCheckSum: 8:f97b552b426f284932461b028e9d6d9c
     id: add-legacy-id-fields
     author: cthielen
 
