--- a/orca-sql/src/main/resources/db/changelog/20180515-execution-canceled-column.yml
+++ b/orca-sql/src/main/resources/db/changelog/20180515-execution-canceled-column.yml
@@ -4,6 +4,7 @@ databaseChangeLog:
     dbms: postgresql
     remove: afterColumn
 - changeSet:
+    validCheckSum: 8:4c214f01b403163ac014e78ef3603c71
     id: add-canceled-column
     author: robzienert
     changes:
