--- a/orca-sql/src/main/resources/db/changelog/20180724-partitions.yml
+++ b/orca-sql/src/main/resources/db/changelog/20180724-partitions.yml
@@ -4,6 +4,7 @@ databaseChangeLog:
     dbms: postgresql
     remove: afterColumn
 - changeSet:
+    validCheckSum: 8:26bce67df849ed409cdd5dffc335a95b
     id: partition-updated-executions
     author: rzienert
     changes:
