--- a/orca-sql/src/main/resources/db/changelog/20181016-add-start-time.yml
+++ b/orca-sql/src/main/resources/db/changelog/20181016-add-start-time.yml
@@ -4,6 +4,7 @@ databaseChangeLog:
     dbms: postgresql
     remove: afterColumn
 - changeSet:
+    validCheckSum: 8:576429ab611ed541e5f99ab282de4177
     id: 20181016-add-start-time
     author: robzienert
     changes:
