--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ kotlinVersion=1.6.21
 org.gradle.parallel=true
 org.gradle.jvmargs=-Xmx6g
 spinnakerGradleVersion=8.32.1
-targetJava11=true
+targetJava17=false
 
 # To enable a composite reference to a project, set the
 #  project property `'<projectName>Composite=true'`.
