--- a/orca-sql/orca-sql.gradle
+++ b/orca-sql/orca-sql.gradle
@@ -32,6 +32,7 @@ dependencies {
   implementation("org.springframework:spring-jdbc")
   implementation("org.springframework:spring-tx")
   implementation("org.springframework.boot:spring-boot-autoconfigure")
+  implementation "org.springframework.boot:spring-boot-starter-json"
   implementation("org.jooq:jooq")
   implementation("org.liquibase:liquibase-core")
   implementation("com.zaxxer:HikariCP")
