refactor(sql): clean up TriggerDeserializer and update tests

--- a/orca-core-tck/orca-core-tck.gradle
+++ b/orca-core-tck/orca-core-tck.gradle
@@ -3,6 +3,7 @@ apply from: "$rootDir/gradle/groovy.gradle"
 dependencies {
   api("org.spockframework:spock-core")
   implementation(project(":orca-core"))
+  compileOnly(project(":orca-sql"))
   implementation("junit:junit")
   implementation(project(":orca-test"))
   implementation(project(":orca-test-groovy"))
