fix(tests): refactor tests and junit platform name to execute startup tests
Startup test under module keiko-mem-spring and keiko-redis-spring are not executing and throwing below error:

```
> Task :keiko-mem-spring:test FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':keiko-mem-spring:test'.
> No tests found for given includes: [com.netflix.spinnaker.q.mem.spring.SpringStartupTests](--tests filter)

```

```
> Task :keiko-redis-spring:test FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':keiko-redis-spring:test'.
> No tests found for given includes: [com.netflix.spinnaker.q.redis.spring.SpringStartupTests](--tests filter)

```
After fixing these issues by refactoring the junit platform as `junit-jupiter`, encountered below errors while execution:
```
Failed to load ApplicationContext
Caused by: org.springframework.beans.factory.NoSuchBeanDefinitionException: No qualifying bean of type 'com.netflix.spectator.api.Registry' available: expected at least 1 bean which qualifies as autowire candidate. Dependency annotations: {}
	at app//org.springframework.beans.factory.support.DefaultListableBeanFactory.raiseNoMatchingBeanFound(DefaultListableBeanFactory.java:1801)
	at app//org.springframework.beans.factory.support.DefaultListableBeanFactory.doResolveDependency(DefaultListableBeanFactory.java:1357)
	at app//org.springframework.beans.factory.support.DefaultListableBeanFactory.resolveDependency(DefaultListableBeanFactory.java:1311)
	at app//org.springframework.beans.factory.support.ConstructorResolver.resolveAutowiredArgument(ConstructorResolver.java:911)
	at app//org.springframework.beans.factory.support.ConstructorResolver.createArgumentArray(ConstructorResolver.java:788)
	... 133 more
```

```
Failed to load ApplicationContext
Caused by: org.springframework.beans.BeanInstantiationException: Failed to instantiate [com.netflix.spinnaker.q.redis.RedisQueue]: Factory method 'queu

--- a/keiko-redis-spring/keiko-redis-spring.gradle
+++ b/keiko-redis-spring/keiko-redis-spring.gradle
@@ -9,12 +9,7 @@ dependencies {
   testImplementation "org.springframework:spring-test"
   testImplementation "org.springframework.boot:spring-boot-test"
   testImplementation "org.assertj:assertj-core"
+  testImplementation("io.spinnaker.kork:kork-jedis-test")
 
   testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine"
-}
-
-test {
-  useJUnitPlatform {
-    includeEngines "jupiter"
-  }
 }
