--- a/orca-echo/orca-echo.gradle
+++ b/orca-echo/orca-echo.gradle
@@ -31,6 +31,7 @@ dependencies {
   implementation("io.spinnaker.kork:kork-retrofit")
 
   testImplementation("com.squareup.retrofit:retrofit-mock")
+  testRuntimeOnly("net.bytebuddy:byte-buddy")
 }
 
 tasks.withType(Javadoc) {
