--- a/orca-igor/orca-igor.gradle
+++ b/orca-igor/orca-igor.gradle
@@ -33,6 +33,7 @@ dependencies {
   testImplementation("org.springframework:spring-test")
   testImplementation("io.spinnaker.fiat:fiat-core:$fiatVersion")
   testImplementation("com.github.tomakehurst:wiremock-jre8-standalone")
+  testRuntimeOnly("net.bytebuddy:byte-buddy")
 }
 
 sourceSets {
