chore(keiko-redis/test): add slf4j binding to keiko-redis tests
so test output contains log messages and to avoid these error messages:

SLF4J: Failed to load class "org.slf4j.impl.StaticLoggerBinder".
SLF4J: Defaulting to no-operation (NOP) logger implementation
SLF4J: See http://www.slf4j.org/codes.html#StaticLoggerBinder for further details.
SLF4J: Failed to load class "org.slf4j.impl.StaticMDCBinder".
SLF4J: Defaulting to no-operation MDCAdapter implementation.
SLF4J: See http://www.slf4j.org/codes.html#no_static_mdc_binder for further details.

--- a/keiko-redis/keiko-redis.gradle
+++ b/keiko-redis/keiko-redis.gradle
@@ -11,4 +11,5 @@ dependencies {
 
   testImplementation project(":keiko-tck")
   testImplementation "io.spinnaker.kork:kork-jedis-test"
+  testRuntimeOnly "ch.qos.logback:logback-classic"
 }
