chore(keiko-redis-spring/test): add slf4j binding to keiko-redis-spring tests
so test output contains log messages and to avoid these error messages:

SLF4J: Failed to load class "org.slf4j.impl.StaticLoggerBinder".
SLF4J: Defaulting to no-operation (NOP) logger implementation
SLF4J: See http://www.slf4j.org/codes.html#StaticLoggerBinder for further details.

--- a/keiko-redis-spring/keiko-redis-spring.gradle
+++ b/keiko-redis-spring/keiko-redis-spring.gradle
@@ -11,5 +11,6 @@ dependencies {
   testImplementation "org.assertj:assertj-core"
   testImplementation("io.spinnaker.kork:kork-jedis-test")
 
+  testRuntimeOnly "ch.qos.logback:logback-classic"
   testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine"
 }
