refactor(dependency): replace groovy coordinates and code adjustment to accomodate upgrade of groovy 4.x
- Replacing the groovy coordinates from `org.codehaus.groovy` to `org.apache.groovy` supported by groovy 4.x and above versions.

- While upgrading groovy 4.0.15:

Encounter below error during test executions of orca-clouddriver module and similar errors in orca-pipelinetemplate module:
```
No such property: disabled for class: com.netflix.spinnaker.orca.clouddriver.pipeline.servergroup.support.TargetServerGroup
groovy.lang.MissingPropertyException: No such property: disabled for class: com.netflix.spinnaker.orca.clouddriver.pipeline.servergroup.support.TargetServerGroup
	at app//com.netflix.spinnaker.orca.clouddriver.tasks.cluster.AbstractClusterWideClouddriverTask.isActive(AbstractClusterWideClouddriverTask.groovy:266)
	at com.netflix.spinnaker.orca.clouddriver.tasks.cluster.AbstractClusterWideClouddriverTask.filterActiveGroups_closure9(AbstractClusterWideClouddriverTask.groovy:187)
	at app//com.netflix.spinnaker.orca.clouddriver.tasks.cluster.AbstractClusterWideClouddriverTask.filterActiveGroups(AbstractClusterWideClouddriverTask.groovy:187)
	at app//com.netflix.spinnaker.orca.clouddriver.tasks.cluster.ScaleDownClusterTask.filterServerGroups(ScaleDownClusterTask.groovy:75)
	at com.netflix.spinnaker.orca.clouddriver.tasks.cluster.ScaleDownClusterTaskSpec.extracts config from context(ScaleDownClusterTaskSpec.groovy:49)
```
To fix this issue, replaced the fields with its getter method.

Encounter below error during compilation of orca-clouddriver module:
```
startup failed:
/orca/orca-clouddriver/src/main/groovy/com/netflix/spinnaker/orca/kato/pipeline/support/SourceResolver.groovy: 118: [Static type checking] - Cannot find matching method ?#compareTo(?). Please check if the declared type is correct and if the method exists.
 @ line 118, column 92.
   ze(a1)<=> instanceSize(a2) ?: created(a2
                                 ^

1 error

> Task :orca-clouddriver:co

--- a/gradle/spock.gradle
+++ b/gradle/spock.gradle
@@ -24,7 +24,7 @@ dependencies {
   testImplementation("org.spockframework:spock-core")
   testImplementation("cglib:cglib-nodep")
   testImplementation("org.objenesis:objenesis")
-  testImplementation("org.codehaus.groovy:groovy")
+  testImplementation("org.apache.groovy:groovy")
   testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")
 }
 
