--- a/orca-bakery/orca-bakery.gradle
+++ b/orca-bakery/orca-bakery.gradle
@@ -25,7 +25,7 @@ dependencies {
   implementation("com.fasterxml.jackson.core:jackson-databind")
   implementation("com.fasterxml.jackson.datatype:jackson-datatype-guava")
   implementation("io.spinnaker.fiat:fiat-core:$fiatVersion")
-  implementation("org.codehaus.groovy:groovy-datetime")
+  implementation("org.apache.groovy:groovy-datetime")
   implementation("io.spinnaker.kork:kork-retrofit")
 
   api("io.spinnaker.kork:kork-web")
