--- a/orca-integrations-cloudfoundry/orca-integrations-cloudfoundry.gradle
+++ b/orca-integrations-cloudfoundry/orca-integrations-cloudfoundry.gradle
@@ -12,7 +12,7 @@ dependencies {
   implementation(project(":orca-core"))
 
   implementation("org.jetbrains:annotations")
-  testImplementation("org.codehaus.groovy:groovy")
+  testImplementation("org.apache.groovy:groovy")
   testImplementation("org.junit.jupiter:junit-jupiter-api")
   testImplementation("org.assertj:assertj-core")
   testImplementation("org.mockito:mockito-core:2.25.0")
