--- a/orca-pipelinetemplate/orca-pipelinetemplate.gradle
+++ b/orca-pipelinetemplate/orca-pipelinetemplate.gradle
@@ -28,7 +28,7 @@ dependencies {
 
   testImplementation("org.slf4j:slf4j-simple")
   testImplementation("org.assertj:assertj-core")
-  testImplementation("org.codehaus.groovy:groovy-json")
+  testImplementation("org.apache.groovy:groovy-json")
   testImplementation("io.spinnaker.fiat:fiat-core:$fiatVersion")
   testImplementation("io.spinnaker.kork:kork-retrofit")
   testRuntimeOnly("net.bytebuddy:byte-buddy")
