--- a/orca-queue/orca-queue.gradle
+++ b/orca-queue/orca-queue.gradle
@@ -41,6 +41,6 @@ dependencies {
   testImplementation(project(":orca-queue-tck"))
   testImplementation(project(":orca-queue-redis"))
   testImplementation(project(":orca-echo"))
-  testImplementation("org.codehaus.groovy:groovy")
+  testImplementation("org.apache.groovy:groovy")
   testImplementation("org.assertj:assertj-core")
 }
