--- a/orca-web/orca-web.gradle
+++ b/orca-web/orca-web.gradle
@@ -93,7 +93,7 @@ dependencies {
   testImplementation("dev.minutest:minutest")
   testImplementation("io.strikt:strikt-core")
   testImplementation("io.mockk:mockk")
-  testImplementation("org.codehaus.groovy:groovy-json")
+  testImplementation("org.apache.groovy:groovy-json")
 }
 
 test {
