feat(webhook): add http method + url-based allow list to webhook stages
Configure with the following properties:

webhook.allowedRequestsEnabled (default: false)
webhook.allowedRequests: (default: empty list)
  - httpMethods: list of strings, e.g. [ "GET" ]
    urlPrefix: "https://my-url:port/path/starts/with"

Note, if allowRequestsEnabled is true, and allowedRequests is empty, no requests are allowed.

--- a/orca-webhook/orca-webhook.gradle
+++ b/orca-webhook/orca-webhook.gradle
@@ -32,8 +32,10 @@ dependencies {
   implementation("com.squareup.okhttp3:okhttp")
   implementation("com.jakewharton.retrofit:retrofit1-okhttp3-client:1.1.0")
 
+  testImplementation("com.github.tomakehurst:wiremock-jre8-standalone")
   testImplementation("com.squareup.okhttp3:mockwebserver")
   testImplementation("io.spinnaker.kork:kork-test")
+  testImplementation("org.assertj:assertj-core")
   testImplementation("org.bouncycastle:bcpkix-jdk18on")
   testImplementation("org.junit.jupiter:junit-jupiter-api")
   testImplementation("org.mockito:mockito-core")
