refactor(retrofit2): refactor the code to align with the retrofit2 upgrade of fiat-api

--- a/orca-web/orca-web.gradle
+++ b/orca-web/orca-web.gradle
@@ -94,6 +94,7 @@ dependencies {
   testImplementation("io.strikt:strikt-core")
   testImplementation("io.mockk:mockk")
   testImplementation("org.apache.groovy:groovy-json")
+  testImplementation ("com.squareup.retrofit2:retrofit-mock")
 }
 
 test {
